# Webscraping_manuelita1

./: AGENT_APP_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  Readme.txt  cleaner_md.py  discovered_news_links.json  example_usage.py  main.py  pyproject.toml  scrape_manuelita_news.py
agent-app/: .env  .env.example  .gitignore  CHAT_TROUBLESHOOTING.md  DISENO_CORPORATIVO.md  LANGSMITH_SETUP.md  Makefile  QUICK_START.md  README.md  agent.py  app.py  config.py  debug_chat.py  langsmith_config.py  memory.py  parser.py  pyproject.toml  rag.py  setup.ps1  setup_api_key.ps1  test_langsmith.py
agent-app/.streamlit/: config.toml  custom.css
agent-app/agent_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-app/tests/: test_agent.py
agent-app/tools/: structured_tool.py
agent-app/tools/data/: faq_structured.json
agent-app/vectordb/626a9db5-5d95-40cf-97f9-80dde99d83c3/: index_metadata.pickle
cleaned_manuelita_content/: manuelita_com_blog.md  manuelita_com_contacto.md  manuelita_com_fundacion_manuelita.md  manuelita_com_historia.md  manuelita_com_manuelita_160.md  manuelita_com_manuelita_productos_biodiesel.md  manuelita_com_manuelita_productos_frutas_y_hortalizas.md  manuelita_com_manuelita_sostenib_ambiental.md  manuelita_com_sagrilaft_2.md  manuelita_com_sostenibilidad.md  manuelita_com_talento.md
configs/environments/: development.yaml  production.yaml
configs/schemas/: config_schema.yaml
legacy/: COMPLETE_SCRAPING_SUMMARY.md  Manuelita_Complete_Content_Summary.md  README.md  Readme.txt  discovered_news_links.json  main.py  news_cleaner_md.py  scrape_manuelita.py
legacy/cleaned_manuelita_content/: manuelita_com_alimenticio.md  manuelita_com_aviso_autorizacion_tratamiento_datos_personales.md  manuelita_com_energetico.md  manuelita_com_estrategia_corporativa.md  manuelita_com_gobierno_corporativo.md  manuelita_com_home.md  manuelita_com_linea_etica.md  manuelita_com_manuelita_noticias.md  manuelita_com_manuelita_noticias_manuelita_160_anos_comprometida_con_un_futuro_sostenible.md  manuelita_com_manuelita_productos_azucar_industrial.md  (+9 more)
manuelita_content/: manuelita_com_fundacion_manuelita.md  manuelita_com_linea_etica.md  manuelita_com_manuelita_productos_derivados_de_la_cana.md  manuelita_com_manuelita_productos_derivados_de_palma.md  manuelita_com_manuelita_productos_frutas_y_hortalizas.md  manuelita_com_manuelita_productos_mejillones.md  manuelita_com_ptee_2.md  manuelita_com_sagrilaft_2.md
scripts/: cleanup_repository.py
(+383 files in other folders)
